test/semantic_errors/invalid_call1.mc
int main() {
    foo(); /* foo not declared */
}